--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-youtube": "^7.6.2",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-ga": "^2.7.0",
     "react-markdown": "^4.3.1",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
