--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
     "@types/node": "^12.0.0",
     "@types/react-dom": "^16.9.5",
     "@types/react-router-dom": "^5.1.3",
+    "@types/styled-components": "^5.1.25",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-ga": "^2.7.0",
     "react-markdown": "^4.3.1",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
+    "react-router-scroll-top": "^0.3.1",
     "react-scripts": "3.4.0",
+    "styled-components": "^5.3.5",
     "typescript": "~3.7.2"
   },
   "scripts": {
