--- a/package.json
+++ b/package.json
@@ -9,16 +9,19 @@
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
     "@types/react-dom": "^16.9.5",
+    "@types/react-image-gallery": "^1.0.5",
     "@types/react-router-dom": "^5.1.3",
     "@types/styled-components": "^5.1.25",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-ga": "^2.7.0",
+    "react-image-gallery": "^1.2.8",
     "react-markdown": "^4.3.1",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-router-scroll-top": "^0.3.1",
     "react-scripts": "3.4.0",
+    "react-simple-image-slider": "^2.4.1",
     "styled-components": "^5.3.5",
     "typescript": "~3.7.2"
   },
